# rsrename

./: .gitignore  Cargo.toml  README.md  default.nix  derivation.nix  shell.nix
src/: main.rs
