[package]
name = "rsrename"
version = "0.1.0"
#edition = "2021"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1.5.4"
walkdir = "2.3.2"

# [profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
